# src/controllers/subject.js
@@ -1,3 +1,4 @@
+const mongoose = require('mongoose')
 const subjectService = require('~/services/subject')
 const getMatchOptions = require('~/utils/getMatchOptions')
 const getSortOptions = require('~/utils/getSortOptions')
@@ -20,8 +21,13 @@ async function getSubjects(req, res) {
   if (name && typeof name !== 'string') {
     throw createBadRequestError('name must be a string')
   }
-  if (categoryId && typeof categoryId !== 'string') {
-    throw createBadRequestError('categoryId must be a string')
+  if (categoryId) {
+    if (typeof categoryId !== 'string') {
+      throw createBadRequestError('categoryId must be a string')
+    }
+    if (!mongoose.Types.ObjectId.isValid(categoryId)) {
+      throw createBadRequestError('categoryId must be a valid ObjectId')
+    }
   }
 
   const match = getMatchOptions({ category: categoryId, name: getRegex(name) })
@@ -38,8 +44,13 @@ async function getSubjects(req, res) {
 async function getSubjectsNames(req, res) {
   const categoryId = req.query?.categoryId
 
-  if (categoryId && typeof categoryId !== 'string') {
-    throw createBadRequestError('categoryId must be a string')
+  if (categoryId) {
+    if (typeof categoryId !== 'string') {
+      throw createBadRequestError('categoryId must be a string')
+    }
+    if (!mongoose.Types.ObjectId.isValid(categoryId)) {
+      throw createBadRequestError('categoryId must be a valid ObjectId')
+    }
   }
 
   const match = getMatchOptions({ category: categoryId })
@@ -48,7 +59,38 @@ async function getSubjectsNames(req, res) {
   res.status(200).json(items)
 }
 
+const getSubjectById = async (req, res) => {
+  const { id } = req.params
+
+  const subject = await subjectService.getSubjectById(id)
+
+  res.status(200).json(subject)
+}
+
+const addSubject = async (req, res) => {
+  const data = req.body
+  const newSubject = await subjectService.addSubject(data)
+  res.status(201).send(newSubject)
+}
+
+const updateSubject = async (req, res) => {
+  const { id } = req.params
+  const data = req.body
+  await subjectService.updateSubject(id, data)
+  res.status(204).end()
+}
+
+const deleteSubject = async (req, res) => {
+  const { id } = req.params
+  await subjectService.deleteSubject(id)
+  res.status(204).end()
+}
+
 module.exports = {
   getSubjects,
-  getSubjectsNames
+  getSubjectsNames,
+  getSubjectById,
+  addSubject,
+  updateSubject,
+  deleteSubject
 }
