# src/models/subject.js
@@ -1,11 +1,13 @@
-//TEMPORARY MODEL FOR TESTING PURPOSES
-
 const mongoose = require('mongoose')
 
 const SubjectSchema = new mongoose.Schema(
   {
-    name: { type: String, required: true },
-    category: { type: mongoose.Schema.Types.ObjectId, ref: 'ResourcesCategory' }
+    name: { type: String, required: true, trim: true },
+    category: { type: mongoose.Schema.Types.ObjectId, ref: 'ResourcesCategory', required: true },
+    totalOffers: {
+      student: { type: Number, default: 0, min: 0 },
+      tutor: { type: Number, default: 0, min: 0 }
+    }
   },
   { timestamps: true }
 )
